force-app/main/default/objects/Address__c/fields/ActiveFromDate__c.field-meta.xml
<CustomField>
    <fullName>ActiveFromDate__c</fullName>
    <description>Active From Date of the address</description>
    <label>Active From Date</label>
    <type>Date</type>
</CustomField>