force-app/main/default/objects/Address__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City of the address</description>
    <label>City</label>
    <length>250</length>
    <type>Text</type>
</CustomField>