force-app/main/default/objects/Address__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>country of the address</description>
    <label>Country</label>
    <length>250</length>
    <type>Text</type>
</CustomField>