force-app/main/default/objects/Address__c/fields/HousingStatus__c.field-meta.xml
<CustomField>
    <fullName>HousingStatus__c</fullName>
    <label>Housing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owns Free and Clear</fullName>
            </value>
            <value>
                <fullName>Mortgage</fullName>
            </value>
            <value>
                <fullName>Rents</fullName>
            </value>
            <value>
                <fullName>Lives with Parents</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>