force-app/main/default/objects/Address__c/fields/IsPrimary__c.field-meta.xml
<CustomField>
    <fullName>IsPrimary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check if the address is Primary address type</description>
    <label>IsPrimary</label>
    <type>Checkbox</type>
</CustomField>