force-app/main/default/objects/Address__c/fields/MonthsLivedAtCurrentAddress__c.field-meta.xml
<CustomField>
    <fullName>MonthsLivedAtCurrentAddress__c</fullName>
    <description>Months Lived At Current Address</description>
    <label>Months Lived At Current Address</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>