force-app/main/default/objects/Address__c/fields/OccupancyDuration__c.field-meta.xml
<CustomField>
    <fullName>OccupancyDuration__c</fullName>
    <description>Occupancy Duration</description>
    <label>Occupancy Duration</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>