force-app/main/default/objects/Address__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <description>Postal code of the address</description>
    <label>Postal Code</label>
    <length>11</length>
    <type>Text</type>
</CustomField>