force-app/main/default/objects/Address__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>state of the address</description>
    <label>State</label>
    <length>250</length>
    <type>Text</type>
</CustomField>