force-app/main/default/objects/Address__c/fields/StateCode__c.field-meta.xml
<CustomField>
    <fullName>StateCode__c</fullName>
    <description>State code of the address</description>
    <label>State Code</label>
    <length>250</length>
    <type>Text</type>
</CustomField>