force-app/main/default/objects/Address__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>Street address</description>
    <label>Street</label>
    <length>250</length>
    <type>Text</type>
</CustomField>