force-app/main/default/objects/Address__c/fields/UsageType__c.field-meta.xml
<CustomField>
    <fullName>UsageType__c</fullName>
    <description>Usage type of the address</description>
    <label>UsageType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buying / Own With Mortgage</fullName>
            </value>
            <value>
                <fullName>Government Quarters</fullName>
            </value>
            <value>
                <fullName>Live With Parents</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Own-Free and Clear</fullName>
            </value>
            <value>
                <fullName>Rent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>