force-app/main/default/objects/Address__c/fields/YearsLivedAtCurrentAddress__c.field-meta.xml
<CustomField>
    <fullName>YearsLivedAtCurrentAddress__c</fullName>
    <description>Years Lived At Current Address</description>
    <label>Years Lived At Current Address</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>